# AgenticAIAdvanced

./: .env  main.py  pyproject.toml  requirements.txt
notebook/: 1_chotbot.ipynb  Exercise_Graph1.ipynb
