[project]
name = "agenticaiadvanced"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.5",
    "ipykernel>=7.1.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.3",
    "langchain-google-genai>=4.0.0",
    "langchain-groq>=1.1.0",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.4",
    "notebook>=7.5.0",
    "python-dotenv>=1.2.1",
    "typesense>=1.3.0",
]
